--- a/OnTheMap2/Base.lproj/Main.storyboard
+++ b/OnTheMap2/Base.lproj/Main.storyboard
@@ -194,13 +194,71 @@
                     <view key="view" contentMode="scaleToFill" id="fxJ-hA-1SW">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_world" translatesAutoresizingMaskIntoConstraints="NO" id="D5z-tx-fHN">
+                                <rect key="frame" x="137.5" y="74" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="nlP-g2-G79"/>
+                                    <constraint firstAttribute="width" constant="100" id="vjJ-Dr-La3"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a Location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s1C-Sd-t0J">
+                                <rect key="frame" x="46" y="194" width="283" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="lPE-FL-9fk"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a Website" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nmx-WA-Zxk">
+                                <rect key="frame" x="46" y="234" width="283" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="IgR-F4-khi"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fkJ-Aq-KBh">
+                                <rect key="frame" x="46" y="284" width="283" height="50"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="FnT-dn-nzg"/>
+                                </constraints>
+                                <state key="normal" title="FIND LOCATION">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="findLocationButtonPressed:" destination="iLI-pm-zLh" eventType="touchUpInside" id="ZKv-Dh-Mti"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="D5z-tx-fHN" firstAttribute="top" secondItem="WnV-HE-R50" secondAttribute="bottom" constant="10" id="18L-Ac-nwI"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="fkJ-Aq-KBh" secondAttribute="trailing" constant="30" id="1ln-rA-eJ5"/>
+                            <constraint firstItem="s1C-Sd-t0J" firstAttribute="leading" secondItem="fxJ-hA-1SW" secondAttribute="leadingMargin" constant="30" id="D5L-nn-CCT"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="s1C-Sd-t0J" secondAttribute="trailing" constant="30" id="Jra-GP-0Xf"/>
+                            <constraint firstItem="D5z-tx-fHN" firstAttribute="centerX" secondItem="fxJ-hA-1SW" secondAttribute="centerX" id="TkF-6g-aE2"/>
+                            <constraint firstItem="fkJ-Aq-KBh" firstAttribute="leading" secondItem="fxJ-hA-1SW" secondAttribute="leadingMargin" constant="30" id="cO8-4W-Mu3"/>
+                            <constraint firstItem="fkJ-Aq-KBh" firstAttribute="top" secondItem="nmx-WA-Zxk" secondAttribute="bottom" constant="20" id="hid-6v-IiH"/>
+                            <constraint firstItem="nmx-WA-Zxk" firstAttribute="top" secondItem="s1C-Sd-t0J" secondAttribute="bottom" constant="10" id="igr-Mh-UX4"/>
+                            <constraint firstItem="nmx-WA-Zxk" firstAttribute="leading" secondItem="fxJ-hA-1SW" secondAttribute="leadingMargin" constant="30" id="lJc-X7-hg3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="nmx-WA-Zxk" secondAttribute="trailing" constant="30" id="llP-EZ-lFA"/>
+                            <constraint firstItem="s1C-Sd-t0J" firstAttribute="top" secondItem="D5z-tx-fHN" secondAttribute="bottom" constant="20" id="p53-Ag-oi3"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="cc8-HQ-k2q"/>
+                    <connections>
+                        <outlet property="findLocationButton" destination="fkJ-Aq-KBh" id="Le8-j4-2Db"/>
+                        <outlet property="locationTextField" destination="s1C-Sd-t0J" id="wrf-q0-ULI"/>
+                        <outlet property="websiteTextField" destination="nmx-WA-Zxk" id="Q6X-gO-eTs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ln5-ah-MAn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4812" y="-3"/>
+            <point key="canvasLocation" x="4812" y="-3.1484257871064472"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="wDk-Qb-hPh">
@@ -283,6 +341,7 @@
         <image name="icon_mapview-deselected" width="75" height="50"/>
         <image name="icon_mapview-selected" width="75" height="50"/>
         <image name="icon_pin" width="24" height="24"/>
+        <image name="icon_world" width="52" height="67"/>
         <image name="logo-u" width="62" height="62"/>
     </resources>
 </document>
